// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="sc-bdnylx imvbvh"
>
  <h1
    class="sc-gtssRu dAUXKc"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-dlnjPT erolci"
  >
    <li
      class="sc-jSFkmK dLtsOS"
    >
      <img
        class="sc-eCApGN jlPWcV"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="sc-hKFyIo iqYGZa"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="sc-bdnylx imvbvh"
>
  <h1
    class="sc-gtssRu dAUXKc"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-dlnjPT erolci"
  >
    <li
      class="sc-jSFkmK dLtsOS"
    >
      <img
        class="sc-eCApGN jlPWcV"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="sc-hKFyIo iqYGZa"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
